[gd_scene load_steps=45 format=4 uid="uid://bi1de72m3o7cg"]

[ext_resource type="Script" uid="uid://t76cbww6flnn" path="res://scenes/character_select/character_select.gd" id="1_eh41w"]
[ext_resource type="Texture2D" uid="uid://bn6evonnn01pu" path="res://global/particle_circle.png" id="2_7b4jo"]
[ext_resource type="PackedScene" uid="uid://b7jceqvpo4u46" path="res://scenes/camera/main_camera.tscn" id="2_lfgi2"]
[ext_resource type="Texture2D" uid="uid://dkpy7273cfjn7" path="res://global/light_circle.png" id="3_06owe"]
[ext_resource type="PackedScene" uid="uid://ujr2ysce8osh" path="res://scenes/player/hud/hud_layer.tscn" id="3_j0j8e"]
[ext_resource type="Shader" uid="uid://doivk4aujl8ec" path="res://global/shaders/world.gdshader" id="4_4e68u"]
[ext_resource type="TileSet" uid="uid://cg5rtat1xuxel" path="res://scenes/world/tileset.tres" id="5_6l3qd"]
[ext_resource type="Texture2D" uid="uid://pk10mfma0qux" path="res://scenes/player/sprites/gator-sitting.png" id="9_j7ya7"]
[ext_resource type="PackedScene" uid="uid://dba1hfvlqg084" path="res://scenes/entity/entity_types/combat_dummy.tscn" id="10_4tey0"]
[ext_resource type="Texture2D" uid="uid://cpan0d5c1tacy" path="res://scenes/player/sprites/john-sitting.png" id="10_6un2i"]
[ext_resource type="Texture2D" uid="uid://t1bkcrkpysmv" path="res://scenes/player/sprites/ora-sitting.png" id="11_4okqw"]
[ext_resource type="Shader" uid="uid://dvh1o31unn1h7" path="res://scenes/character_select/godrays.gdshader" id="12_xcrmr"]

[sub_resource type="Curve" id="Curve_meuf8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.108514, 1), 0.0, 0.0, 0, 0, Vector2(0.923205, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_3b418"]
curve = SubResource("Curve_meuf8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_y5kng"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 30.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, -20, 0)
radial_accel_min = -20.0
radial_accel_max = -20.0
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_3b418")
color = Color(0.737255, 0.196078, 0.227451, 1)

[sub_resource type="Gradient" id="Gradient_3j33i"]
offsets = PackedFloat32Array(0.581982, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ldasb"]
gradient = SubResource("Gradient_3j33i")

[sub_resource type="Curve" id="Curve_6jyr4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.247078, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_70kmn"]
curve = SubResource("Curve_6jyr4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_arvsc"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 15.0
gravity = Vector3(0, 0, 0)
scale_min = 0.6
scale_curve = SubResource("CurveTexture_70kmn")
color = Color(0.243137, 0.243137, 0.243137, 0.870588)
color_ramp = SubResource("GradientTexture1D_ldasb")

[sub_resource type="Gradient" id="Gradient_3vixf"]
offsets = PackedFloat32Array(0, 0.74955)
colors = PackedColorArray(0.870588, 0.396078, 0.309804, 1, 0.654902, 0.298039, 0.231373, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hjnn4"]
gradient = SubResource("Gradient_3vixf")

[sub_resource type="Curve" id="Curve_c4f2a"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.108514, 1), 0.0, 0.0, 0, 0, Vector2(0.924875, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_5jix0"]
curve = SubResource("Curve_c4f2a")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_10hwa"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, -20, 0)
radial_accel_min = -20.0
radial_accel_max = -20.0
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_5jix0")
color = Color(0.870588, 0.396078, 0.309804, 1)
color_initial_ramp = SubResource("GradientTexture1D_hjnn4")

[sub_resource type="Curve" id="Curve_cbs62"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.108514, 1), 0.0, 0.0, 0, 0, Vector2(0.926544, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_qjcqw"]
curve = SubResource("Curve_cbs62")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yif4i"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, -20, 0)
radial_accel_min = -20.0
radial_accel_max = -20.0
scale_min = 0.2
scale_max = 0.3
scale_curve = SubResource("CurveTexture_qjcqw")
color = Color(0.909804, 0.580392, 0.109804, 1)

[sub_resource type="Curve" id="Curve_mf8x6"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.108514, 1), 0.0, 0.0, 0, 0, Vector2(0.90985, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_g2a0t"]
curve = SubResource("Curve_mf8x6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sc5qi"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, -20, 0)
radial_accel_min = -30.0
radial_accel_max = -20.0
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_g2a0t")
color = Color(1, 0.913725, 0.341176, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_f5fth"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_3j247"]
_data = [Vector2(0.0133556, 1), 0.0, 0.0, 0, 0, Vector2(0.866444, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_61t3s"]
curve = SubResource("Curve_3j247")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fka71"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, -20, 0)
radial_accel_min = -30.0
radial_accel_max = -20.0
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_61t3s")
color = Color(1, 0.913725, 0.341176, 1)

[sub_resource type="Animation" id="Animation_3f8pi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}

[sub_resource type="Animation" id="Animation_vjx06"]
resource_name = "flicker"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.75, 0.65]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p27pf"]
_data = {
&"RESET": SubResource("Animation_3f8pi"),
&"flicker": SubResource("Animation_vjx06")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qr3b1"]
shader = ExtResource("4_4e68u")
shader_parameter/shadow_size = Vector2(3, 3)
shader_parameter/shadow_color = Color(0, 0, 0, 0.5)

[sub_resource type="Gradient" id="Gradient_tp23o"]
offsets = PackedFloat32Array(0, 0.117117, 0.691892, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 0.913725, 0.341176, 1, 0.737255, 0.196078, 0.227451, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_t0wiy"]
gradient = SubResource("Gradient_tp23o")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_iwuu2"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 3.0
direction = Vector3(0, -1, 0)
spread = 60.0
flatness = 0.5
initial_velocity_min = 30.0
initial_velocity_max = 50.0
orbit_velocity_min = -0.1
orbit_velocity_max = 0.1
gravity = Vector3(0, 30, 0)
scale_min = 0.1
scale_max = 0.2
scale_curve = SubResource("CurveTexture_61t3s")
color_ramp = SubResource("GradientTexture1D_t0wiy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e6o85"]
shader = ExtResource("12_xcrmr")
shader_parameter/angle = 0.0
shader_parameter/position = 0.0
shader_parameter/spread = 0.722
shader_parameter/cutoff = 4.75e-08
shader_parameter/falloff = 0.2
shader_parameter/edge_fade = 0.273
shader_parameter/speed = 1.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(0.65098, 0.803922, 1, 0.2)
shader_parameter/hdr = false
shader_parameter/seed = 6.035

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_k2juk"]
normal = Vector2(-1, 0)

[node name="CharacterSelectScreen" type="Node2D"]
script = ExtResource("1_eh41w")
metadata/_edit_horizontal_guides_ = []

[node name="MainCamera" parent="." instance=ExtResource("2_lfgi2")]
position = Vector2(160, 89)

[node name="HUD" parent="MainCamera" instance=ExtResource("3_j0j8e")]
player_container = NodePath("../../Shaders/Players")

[node name="Fire" type="GPUParticles2D" parent="."]
position = Vector2(176, 124)
amount = 35
texture = ExtResource("2_7b4jo")
preprocess = 1.0
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_y5kng")

[node name="Smoke" type="GPUParticles2D" parent="Fire"]
show_behind_parent = true
amount = 10
texture = ExtResource("2_7b4jo")
lifetime = 3.0
preprocess = 3.0
process_material = SubResource("ParticleProcessMaterial_arvsc")

[node name="SmallFire2" type="GPUParticles2D" parent="Fire"]
amount = 30
texture = ExtResource("2_7b4jo")
preprocess = 1.0
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_10hwa")

[node name="SmallFire4" type="GPUParticles2D" parent="Fire"]
amount = 30
texture = ExtResource("2_7b4jo")
preprocess = 1.0
process_material = SubResource("ParticleProcessMaterial_yif4i")

[node name="SmallFire" type="GPUParticles2D" parent="Fire"]
amount = 30
texture = ExtResource("2_7b4jo")
lifetime = 0.5
preprocess = 1.0
trail_enabled = true
process_material = SubResource("ParticleProcessMaterial_sc5qi")

[node name="SmallFire3" type="GPUParticles2D" parent="Fire"]
material = SubResource("CanvasItemMaterial_f5fth")
amount = 30
texture = ExtResource("2_7b4jo")
lifetime = 0.5
preprocess = 1.0
process_material = SubResource("ParticleProcessMaterial_fka71")

[node name="PointLight2D" type="PointLight2D" parent="Fire"]
color = Color(1, 0.815686, 0.0941176, 1)
energy = 0.612315
texture = ExtResource("3_06owe")
texture_scale = 0.653079

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fire"]
reset_on_save = false
root_node = NodePath("../PointLight2D")
libraries = {
&"": SubResource("AnimationLibrary_p27pf")
}

[node name="Shaders" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_qr3b1")

[node name="Layer0" type="TileMapLayer" parent="Shaders"]
tile_map_data = PackedByteArray("AAD/////AgABAAIAAAD//wAAAgABAAMAAAD//wEAAgABAAQAAAD//wIAAgABAAMAAAD//wMAAgABAAQAAAD//wQAAgABAAMAAAD//wUAAgABAAQAAAD//wYAAgABAAQAAAD//wcAAgABAAQAAAD//wgAAgABAAQAAAD//wkAAgABAAMAAAD//woAAgABAAQAAAD//wsAAgABAAQAAAD//wwAAgABAAQAAAD//w0AAgABAAQAAAD//w4AAgABAAQAAAD//w8AAgABAAMAAAD//xAAAgABAAQAAAD//xEAAgABAAQAAAD//xIAAgABAAMAAAD//xMAAgABAAQAAAD//xQAAgABAAQAAAD//xUAAgABAAQAAAD//xYAAgABAAUAAAAAAP//AgACAAIAAAAAAAAAAgACAAQAAAAAAAEAAgACAAQAAAAAAAIAAgACAAMAAAAAAAMAAgACAAQAAAAAAAQAAgACAAQAAAAAAAUAAgACAAQAAAAAAAYAAgACAAQAAAAAAAcAAgADAAMAAAAAAAgAAgACAAQAAAAAAAkAAgACAAQAAAAAAAoAAgACAAQAAAAAAAsAAgACAAMAAAAAAAwAAgACAAQAAAAAAA0AAgACAAQAAAAAAA4AAgACAAQAAAAAAA8AAgACAAQAAAAAABAAAgADAAMAAAAAABEAAgACAAQAAAAAABIAAgACAAQAAAAAABMAAgACAAQAAAAAABQAAgACAAQAAAAAABUAAgACAAMAAAAAABYAAgACAAUAAAABAP//AgACAAIAAAABAAAAAgACAAQAAAABAAEAAgADAAMAAAABAAIAAgAIAAAAAAABAAMAAgAEAAQAAAABAAQAAgAEAAMAAAABAAUAAgAEAAQAAAABAAYAAgAEAAQAAAABAAcAAgAEAAQAAAABAAgAAgAEAAMAAAABAAkAAgAEAAQAAAABAAoAAgAJAAQAAAABAAsAAgACAAMAAAABAAwAAgACAAMAAAABAA0AAgACAAQAAAABAA4AAgACAAMAAAABAA8AAgACAAQAAAABABAAAgACAAQAAAABABEAAgACAAMAAAABABIAAgADAAMAAAABABMAAgACAAQAAAABABQAAgACAAQAAAABABUAAgACAAQAAAABABYAAgACAAUAAAACAP//AgACAAIAAAACAAAAAgACAAQAAAACAAEAAgACAAQAAAACAAIAAgACAAUAAAACAAoAAgAEAAIAAAACAAsAAgAEAAMAAAACAAwAAgAEAAQAAAACAA0AAgAJAAQAAAACAA4AAgACAAQAAAACAA8AAgACAAMAAAACABAAAgACAAQAAAACABEAAgACAAMAAAACABIAAgACAAQAAAACABMAAgACAAQAAAACABQAAgACAAMAAAACABUAAgACAAQAAAACABYAAgACAAUAAAADAP//AgACAAIAAAADAAAAAgADAAMAAAADAAEAAgACAAMAAAADAAIAAgACAAUAAAADAA0AAgAEAAIAAAADAA4AAgAJAAQAAAADAA8AAgACAAQAAAADABAAAgACAAQAAAADABEAAgACAAMAAAADABIAAgACAAMAAAADABMAAgACAAMAAAADABQAAgACAAQAAAADABUAAgACAAQAAAADABYAAgACAAUAAAAEAP//AgADAAIAAAAEAAAAAgACAAMAAAAEAAEAAgACAAMAAAAEAAIAAgACAAUAAAAEAA4AAgADAAIAAAAEAA8AAgACAAQAAAAEABAAAgACAAQAAAAEABEAAgACAAQAAAAEABIAAgACAAQAAAAEABMAAgACAAQAAAAEABQAAgACAAQAAAAEABUAAgACAAQAAAAEABYAAgACAAUAAAAFAP//AgADAAIAAAAFAAAAAgACAAQAAAAFAAEAAgACAAMAAAAFAAIAAgACAAUAAAAFAA4AAgACAAIAAAAFAA8AAgACAAQAAAAFABAAAgADAAMAAAAFABEAAgACAAMAAAAFABIAAgACAAQAAAAFABMAAgADAAMAAAAFABQAAgACAAMAAAAFABUAAgACAAQAAAAFABYAAgACAAUAAAAGAP//AgADAAIAAAAGAAAAAgACAAQAAAAGAAEAAgADAAMAAAAGAAIAAgACAAUAAAAGAA4AAgACAAIAAAAGAA8AAgACAAQAAAAGABAAAgACAAQAAAAGABEAAgACAAQAAAAGABIAAgACAAMAAAAGABMAAgACAAQAAAAGABQAAgACAAQAAAAGABUAAgACAAQAAAAGABYAAgACAAUAAAAHAP//AgACAAIAAAAHAAAAAgACAAQAAAAHAAEAAgAIAAAAAAAHAAIAAgAEAAUAAAAHAA4AAgADAAIAAAAHAA8AAgACAAQAAAAHABAAAgACAAQAAAAHABEAAgACAAQAAAAHABIAAgADAAMAAAAHABMAAgACAAQAAAAHABQAAgACAAQAAAAHABUAAgACAAQAAAAHABYAAgACAAUAAAAIAP//AgAEAAIAAAAIAAAAAgAEAAQAAAAIAAEAAgAEAAUAAAAIAA4AAgACAAIAAAAIAA8AAgACAAQAAAAIABAAAgACAAMAAAAIABEAAgACAAQAAAAIABIAAgACAAMAAAAIABMAAgACAAQAAAAIABQAAgACAAQAAAAIABUAAgACAAQAAAAIABYAAgACAAUAAAAJAA4AAgACAAIAAAAJAA8AAgACAAQAAAAJABAAAgACAAQAAAAJABEAAgACAAQAAAAJABIAAgACAAMAAAAJABMAAgADAAMAAAAJABQAAgACAAQAAAAJABUAAgADAAMAAAAJABYAAgACAAUAAAAKAA4AAgADAAIAAAAKAA8AAgADAAMAAAAKABAAAgACAAQAAAAKABEAAgACAAQAAAAKABIAAgACAAQAAAAKABMAAgACAAQAAAAKABQAAgACAAQAAAAKABUAAgACAAQAAAAKABYAAgACAAUAAAALAA4AAgACAAIAAAALAA8AAgACAAMAAAALABAAAgACAAQAAAALABEAAgACAAQAAAALABIAAgACAAQAAAALABMAAgACAAQAAAALABQAAgACAAQAAAALABUAAgACAAQAAAALABYAAgACAAUAAAAMAA4AAgACAAIAAAAMAA8AAgACAAQAAAAMABAAAgACAAQAAAAMABEAAgACAAQAAAAMABIAAgACAAQAAAAMABMAAgACAAQAAAAMABQAAgACAAQAAAAMABUAAgACAAQAAAAMABYAAgACAAUAAAANAA4AAgAEAAIAAAANAA8AAgAJAAQAAAANABAAAgACAAQAAAANABEAAgACAAQAAAANABIAAgACAAQAAAANABMAAgACAAQAAAANABQAAgACAAMAAAANABUAAgADAAMAAAANABYAAgACAAUAAAAOAA8AAgACAAIAAAAOABAAAgACAAQAAAAOABEAAgACAAQAAAAOABIAAgACAAQAAAAOABMAAgACAAQAAAAOABQAAgACAAQAAAAOABUAAgACAAQAAAAOABYAAgACAAUAAAAPAA8AAgAEAAIAAAAPABAAAgAJAAQAAAAPABEAAgACAAQAAAAPABIAAgACAAQAAAAPABMAAgACAAMAAAAPABQAAgACAAQAAAAPABUAAgACAAQAAAAPABYAAgACAAUAAAAQABAAAgACAAIAAAAQABEAAgACAAQAAAAQABIAAgACAAQAAAAQABMAAgACAAQAAAAQABQAAgACAAQAAAAQABUAAgACAAQAAAAQABYAAgACAAUAAAARABAAAgACAAIAAAARABEAAgACAAQAAAARABIAAgADAAMAAAARABMAAgACAAQAAAARABQAAgACAAQAAAARABUAAgACAAQAAAARABYAAgACAAUAAAASABAAAgADAAIAAAASABEAAgACAAMAAAASABIAAgACAAQAAAASABMAAgACAAQAAAASABQAAgADAAMAAAASABUAAgACAAQAAAASABYAAgACAAUAAAATABAAAgACAAIAAAATABEAAgACAAQAAAATABIAAgACAAQAAAATABMAAgACAAQAAAATABQAAgACAAMAAAATABUAAgACAAQAAAATABYAAgACAAUAAAAUABAAAgACAAIAAAAUABEAAgACAAQAAAAUABIAAgADAAMAAAAUABMAAgACAAQAAAAUABQAAgACAAQAAAAUABUAAgACAAMAAAAUABYAAgACAAUAAAAVAA8AAgAKAAMAAAAVABAAAgADAAIAAAAVABEAAgACAAQAAAAVABIAAgACAAQAAAAVABMAAgACAAQAAAAVABQAAgACAAQAAAAVABUAAgACAAQAAAAVABYAAgACAAUAAAAWAP//AgABAAIAAAAWAAAAAgABAAMAAAAWAAEAAgABAAMAAAAWAAIAAgABAAMAAAAWAAMAAgABAAUAAAAWAA8AAgALAAMAAAAWABAAAgADAAIAAAAWABEAAgACAAQAAAAWABIAAgACAAQAAAAWABMAAgACAAQAAAAWABQAAgACAAQAAAAWABUAAgACAAQAAAAWABYAAgACAAUAAAAXAP//AgACAAIAAAAXAAAAAgADAAMAAAAXAAEAAgACAAQAAAAXAAIAAgADAAMAAAAXABAAAgACAAIAAAAXABEAAgACAAQAAAAXABIAAgACAAQAAAAXABMAAgADAAMAAAAXABQAAgACAAQAAAAXABUAAgACAAQAAAAXABYAAgACAAUAAAAYAP//AgADAAIAAAAYAAAAAgACAAQAAAAYAAEAAgADAAMAAAAYAAIAAgADAAMAAAAYAAMAAgACAAUAAAAYABAAAgACAAIAAAAYABEAAgACAAQAAAAYABIAAgACAAQAAAAYABMAAgACAAQAAAAYABQAAgACAAQAAAAYABUAAgADAAMAAAAYABYAAgACAAUAAAAZAP//AgACAAIAAAAZAAAAAgACAAMAAAAZAAEAAgACAAMAAAAZAAIAAgACAAQAAAAZAAMAAgACAAUAAAAZABAAAgADAAIAAAAZABEAAgACAAQAAAAZABIAAgACAAQAAAAZABMAAgACAAQAAAAZABQAAgACAAQAAAAZABUAAgADAAMAAAAZABYAAgACAAUAAAAaAP//AgADAAIAAAAaAAAAAgACAAQAAAAaAAEAAgACAAQAAAAaAAIAAgACAAQAAAAaAAMAAgACAAUAAAAaABAAAgACAAIAAAAaABEAAgACAAMAAAAaABIAAgADAAMAAAAaABMAAgACAAMAAAAaABQAAgACAAQAAAAaABUAAgACAAQAAAAaABYAAgACAAUAAAAbAP//AgADAAIAAAAbAAAAAgACAAMAAAAbAAEAAgACAAQAAAAbAAIAAgACAAQAAAAbAAMAAgACAAUAAAAbABAAAgACAAIAAAAbABEAAgACAAQAAAAbABIAAgACAAMAAAAbABMAAgACAAMAAAAbABQAAgACAAQAAAAbABUAAgADAAMAAAAbABYAAgACAAUAAAAcAP//AgADAAIAAAAcAAAAAgACAAQAAAAcAAEAAgACAAMAAAAcAAIAAgACAAQAAAAcAAMAAgACAAUAAAAcABAAAgADAAIAAAAcABEAAgACAAQAAAAcABIAAgACAAQAAAAcABMAAgACAAQAAAAcABQAAgACAAQAAAAcABUAAgACAAMAAAAcABYAAgACAAUAAAAdAP//AgACAAIAAAAdAAAAAgACAAQAAAAdAAEAAgACAAQAAAAdAAIAAgACAAMAAAAdAAMAAgACAAUAAAAdABAAAgADAAIAAAAdABEAAgACAAQAAAAdABIAAgACAAQAAAAdABMAAgACAAQAAAAdABQAAgACAAQAAAAdABUAAgACAAQAAAAdABYAAgACAAUAAAAeAP//AgACAAIAAAAeAAAAAgADAAMAAAAeAAEAAgACAAQAAAAeAAIAAgACAAMAAAAeAAMAAgACAAUAAAAeAA4AAgABAAIAAAAeAA8AAgABAAMAAAAeABAAAgAMAAQAAAAeABEAAgACAAQAAAAeABIAAgADAAMAAAAeABMAAgACAAQAAAAeABQAAgACAAMAAAAeABUAAgACAAQAAAAeABYAAgACAAUAAAAfAP//AgACAAIAAAAfAAAAAgACAAQAAAAfAAEAAgACAAQAAAAfAAIAAgACAAQAAAAfAAMAAgACAAUAAAAfAA4AAgACAAIAAAAfAA8AAgACAAQAAAAfABAAAgACAAQAAAAfABEAAgADAAMAAAAfABIAAgACAAQAAAAfABMAAgACAAQAAAAfABQAAgACAAQAAAAfABUAAgACAAMAAAAfABYAAgACAAUAAAAgAP//AgACAAIAAAAgAAAAAgACAAMAAAAgAAEAAgACAAQAAAAgAAIAAgADAAMAAAAgAAMAAgACAAUAAAAgAA4AAgADAAIAAAAgAA8AAgACAAQAAAAgABAAAgACAAQAAAAgABEAAgACAAQAAAAgABIAAgACAAMAAAAgABMAAgACAAQAAAAgABQAAgACAAQAAAAgABUAAgADAAMAAAAgABYAAgACAAUAAAAhAP//AgACAAIAAAAhAAAAAgACAAQAAAAhAAEAAgACAAQAAAAhAAIAAgADAAMAAAAhAAMAAgACAAUAAAAhAA4AAgADAAIAAAAhAA8AAgACAAQAAAAhABAAAgACAAQAAAAhABEAAgADAAMAAAAhABIAAgADAAMAAAAhABMAAgACAAQAAAAhABQAAgACAAQAAAAhABUAAgADAAMAAAAhABYAAgACAAUAAAAiAP//AgADAAIAAAAiAAAAAgACAAQAAAAiAAEAAgADAAMAAAAiAAIAAgACAAQAAAAiAAMAAgACAAUAAAAiAA4AAgADAAIAAAAiAA8AAgACAAMAAAAiABAAAgADAAMAAAAiABEAAgACAAMAAAAiABIAAgACAAMAAAAiABMAAgACAAMAAAAiABQAAgACAAQAAAAiABUAAgACAAQAAAAiABYAAgACAAUAAAAjAP//AgADAAIAAAAjAAAAAgACAAQAAAAjAAEAAgACAAQAAAAjAAIAAgACAAMAAAAjAAMAAgACAAUAAAAjAA4AAgACAAIAAAAjAA8AAgACAAQAAAAjABAAAgACAAQAAAAjABEAAgADAAMAAAAjABIAAgACAAQAAAAjABMAAgACAAQAAAAjABQAAgACAAQAAAAjABUAAgACAAQAAAAjABYAAgACAAUAAAAkAP//AgADAAIAAAAkAAAAAgADAAMAAAAkAAEAAgADAAMAAAAkAAIAAgACAAQAAAAkAAMAAgACAAUAAAAkAA4AAgADAAIAAAAkAA8AAgADAAMAAAAkABAAAgADAAMAAAAkABEAAgACAAQAAAAkABIAAgACAAMAAAAkABMAAgACAAQAAAAkABQAAgACAAQAAAAkABUAAgACAAQAAAAkABYAAgACAAUAAAAlAP//AgADAAIAAAAlAAAAAgACAAQAAAAlAAEAAgACAAMAAAAlAAIAAgACAAQAAAAlAAMAAgACAAUAAAAlAA4AAgACAAIAAAAlAA8AAgACAAQAAAAlABAAAgACAAMAAAAlABEAAgACAAQAAAAlABIAAgACAAQAAAAlABMAAgACAAQAAAAlABQAAgACAAMAAAAlABUAAgACAAQAAAAlABYAAgACAAUAAAAmAP//AgADAAIAAAAmAAAAAgACAAQAAAAmAAEAAgACAAQAAAAmAAIAAgACAAQAAAAmAAMAAgACAAUAAAAmAA4AAgACAAIAAAAmAA8AAgACAAQAAAAmABAAAgACAAQAAAAmABEAAgACAAMAAAAmABIAAgACAAQAAAAmABMAAgACAAQAAAAmABQAAgACAAQAAAAmABUAAgACAAQAAAAmABYAAgACAAUAAAAnAP//AgADAAIAAAAnAAAAAgACAAQAAAAnAAEAAgACAAQAAAAnAAIAAgADAAMAAAAnAAMAAgACAAUAAAAnAA4AAgACAAIAAAAnAA8AAgACAAQAAAAnABAAAgACAAQAAAAnABEAAgACAAQAAAAnABIAAgACAAQAAAAnABMAAgACAAQAAAAnABQAAgACAAMAAAAnABUAAgACAAQAAAAnABYAAgACAAUAAAAoAP//AgAEAAIAAAAoAAAAAgAEAAMAAAAoAAEAAgAEAAQAAAAoAAIAAgAEAAQAAAAoAAMAAgAEAAUAAAAoAA4AAgAEAAIAAAAoAA8AAgAEAAMAAAAoABAAAgAEAAQAAAAoABEAAgAEAAQAAAAoABIAAgAEAAQAAAAoABMAAgAEAAQAAAAoABQAAgAEAAQAAAAoABUAAgAEAAQAAAAoABYAAgAEAAUAAAAXAAMAAgACAAUAAAA=")
tile_set = ExtResource("5_6l3qd")
rendering_quadrant_size = 8

[node name="CombatDummy" parent="Shaders" instance=ExtResource("10_4tey0")]
position = Vector2(276, 112)

[node name="SittingPlayers" type="Node2D" parent="Shaders"]
position = Vector2(408, 152)

[node name="Gator" type="Sprite2D" parent="Shaders/SittingPlayers"]
position = Vector2(-248, -32)
texture = ExtResource("9_j7ya7")

[node name="John" type="Sprite2D" parent="Shaders/SittingPlayers"]
position = Vector2(-214, -32)
texture = ExtResource("10_6un2i")

[node name="Ora" type="Sprite2D" parent="Shaders/SittingPlayers"]
position = Vector2(-160, -48)
texture = ExtResource("11_4okqw")
flip_h = true

[node name="Players" type="Node2D" parent="Shaders"]
position = Vector2(408, 152)

[node name="PlayerSelectors" type="Node2D" parent="Shaders"]
position = Vector2(408, 152)

[node name="Ember" type="GPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2(176, 124)
amount = 1
texture = ExtResource("2_7b4jo")
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_iwuu2")

[node name="GodRays" type="ColorRect" parent="."]
light_mask = 2
material = SubResource("ShaderMaterial_e6o85")
offset_left = 73.0
offset_top = -8.0
offset_right = 206.0
offset_bottom = 151.0

[node name="TestBounds" type="StaticBody2D" parent="."]
position = Vector2(320, 78)

[node name="CollisionShape2D" type="CollisionShape2D" parent="TestBounds"]
shape = SubResource("WorldBoundaryShape2D_k2juk")
